--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -8,7 +8,7 @@ layout: default
   <hr>
   </div>
   <div class="upskill-details-section col-4_md-6_xs-12 padded">
-    <img class="profile-photo"src="/images/hosts/{{ page.host-photo }}">
+    <img class="profile-photo"src="{{ page.host-photo }}">
     <h4> Your local friend: </h4> <h5> {{ page.host-name }} </h5>
     <h4> About: </h4>
     <p> {{ page.host-bio}} </p>
@@ -35,7 +35,10 @@ layout: default
     <p>{{ page.good-to-know }}</p>
     <hr>
     <div>
-      <img class="skill-images"src="/images/hosts/{{ page.host-photo }}">
+    {% for image in page.featured-images %}
+      <img class="skill-images" src="{{ image.path }}">
+    {% endfor %}
+
   </div>
 
 
