profile photo blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,9 @@ layout: default
   </div>
   <div class="col-4_xs-12">
     <img class="profile-photo"src="{{ page.author-photo }}">
-    <h4> Written by: {{ page.author-name }} </h5>
+        <h5> Written by:</h5>
+        <p> {{ page.author-name }} </p>
+  <h4> About: </h4>
     <p> {{ page.author-bio}} </p>
   </div>
 </section>
