--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@ layout: default
     <h1> {{page.title}} </h1>
     {{ content }}
   </div>
-  <div class="col-4_xs-12">
-    <img class="profile-photo"  src="{{ page.author-photo }}">
+  <div class="col-4_xs-12 blog-bio">
+    <img class="blog-bio-photo" src="{{ page.author-photo }}">
         <h5> Written by:</h5>
         <p> {{ page.author-name }} </p>
   <h4> About: </h4>
