--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -36,6 +36,8 @@ layout: default
 
     <hr class='grey-line'>
       <h3> Where we'll meet:</h3>
+      <p> {{ page.where }}</p>
+
     <div class="map-section">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.36797235373!2d115.1225105043476!3d-8.639507400707775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2sCanggu%2C+Kuta+Utara%2C+Kabupaten+Badung%2C+Bali!5e0!3m2!1sid!2sid!4v1491119273711" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
