--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         <i class="fa fa-envelope label-icon" aria-hidden="true"></i>
         <i class="fa fa-linkedin label-icon" aria-hidden="true"></i>
       </div>
-      <p> COPYRIGHT © LEARN WITH LOCALS  |  DESIGN BY ULLABULLABULLSHIT</P>
+      <p> COPYRIGHT © LEARN WITH LOCALS  |  DESIGN BY ULLA </P>
     </footer>
   </body>
 </html>
