--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -9,7 +9,7 @@ layout: default
   </div>
   <div class="upskill-details-section col-4_md-6_xs-12 padded">
     <img class="profile-photo"src="{{ page.host-photo }}">
-    <h4> Your local mentor: </h4> <h5> {{ page.host-name }} </h5>
+    <h4> Your local friend: </h4> <h5> {{ page.host-name }} </h5>
     <h4> About: </h4>
     <p> {{ page.host-bio}} </p>
     <p> {{ page.about}} </p>
