--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,10 +63,10 @@
     </div>
   </nav>
 </header>
-
       <h1>
         <div class="title">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
+        <div class="sign-up"><h6>{{page.sign-up}}</h6></div>
       </h1>
     </section>
 
