--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -39,8 +39,7 @@ layout: default
       <p> {{ page.where }}</p>
 
     <div class="map-section">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.549058851026!2d-6.269866584161369!3d53.35132797998011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e8193b99ae3%3A0xdc393e5fc71148ab!2sThe+Chocolate+Factory!5e0!3m2!1sen!2s!4v1493052560594" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.36797219054!2d115.12255341908457!3d-8.639507402657863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2zQ2FuZ2d1LCBOb3J0aCBLdXRhLCDrsJTrkaUg6rWwIOuwnOumrCDsnbjrj4TrhKTsi5zslYQ!5e0!3m2!1sko!2skr!4v1493551945191" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    </div>
     <hr class='grey-line'>
 
     <div>
