--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,16 +52,19 @@
      <div class="burger-menu">
       <ul>
         <li>
-          <a href="">How it works</a>
+          <a href="/how-it-works.html">How it works</a>
         </li>
         <li>
-          <a href="">Sign up</a>
+          <a href="/signup.html">Sign up</a>
         </li>
         <li>
-          <a href="">About</a>
+          <a href="/about.html">About</a>
         </li>
         <li>
-          <a href="">Contact</a>
+          <a href="/contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/blog.html">Blog</a>
         </li>
       <ul>
     </div>
@@ -70,7 +73,9 @@
       <h1>
         <div class="title">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
+        {% if page.button == true %}
         <a class="white-button" href="/signup.html"> SIGN UP </a>
+        {% endif %}
       </h1>
     </section>
 
