--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -39,7 +39,7 @@ layout: default
       <p> {{ page.where }}</p>
 
     <div class="map-section">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.36797219054!2d115.12255341908457!3d-8.639507402657863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2zQ2FuZ2d1LCBOb3J0aCBLdXRhLCDrsJTrkaUg6rWwIOuwnOumrCDsnbjrj4TrhKTsi5zslYQ!5e0!3m2!1sko!2skr!4v1493551945191" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    </div>
+      {{page.map}}
     <hr class='grey-line'>
 
     <div>
