--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <section class="grid">
   <div class="blog-post col-8_xs-12 padded">
     <h1> {{page.title}} </h1>
+    <div class="addthis_inline_share_toolbox"></div>
     {{ content }}
   </div>
   <div class="col-4_xs-12 blog-bio">
