--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,6 +95,6 @@
 <script type="text/javascript" src="main.js">
 
 </script>
-
+<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5909a4a8845e16b1"></script>
   </body>
 </html>
