--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
         <div class="title">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
         {% if page.button == true %}
-        <a class="white-button" href="/signup.html"> SIGN UP </a>
+        <a class="white-button" href="/signup.html"> LEARN MORE </a>
         {% endif %}
       </h1>
     </section>
