--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
         <div class="title">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
         {% if page.button == true %}
-        <a class="white-button" href="/signup.html"> LEARN MORE </a>
+        <a class="white-button" href="/signup.html"> Sign Up </a>
         {% endif %}
       </h1>
     </section>
