--- a/_layouts/upskill.html
+++ b/_layouts/upskill.html
@@ -9,7 +9,7 @@ layout: default
   </div>
   <div class="upskill-details-section col-4_md-6_xs-12 padded">
     <img class="profile-photo"src="{{ page.host-photo }}">
-    <h4> Your local expert: </h4> <h4> {{ page.host-name }} </h4>
+    <h4> Your local expert: </h4> <h4> {{ page.host-signature }} </h4>
     <h4> Bio: </h4>
     <p> {{ page.host-bio}} </p>
     <p> {{ page.about}} </p>
@@ -41,8 +41,8 @@ layout: default
     <div class="map-section">
       {{page.map}}
     <hr class='grey-line'>
-
     <div>
+
     {% for image in page.featured-images %}
       <img class="skill-images" src="{{ image.path }}">
     {% endfor %}
