--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,8 +82,8 @@
     </section>
 
     {{content}}
+  <!--Footer -->
 
-    <!-- FOOTER -->
     <footer class="footer-styles">
       <div>
         <i class="fa fa-facebook-square label-icon" aria-hidden="true"></i>
