--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,13 +4,13 @@ layout: default
 
 <section class="grid">
   <div class="blog-post col-8_xs-12 padded">
-  <div class="blog-post col-8_xs-12">
-    <h1> {{page.title}} </h1>
-    <hr>
-  </div>
-    <div class="blog-post col-8_xs-12 padded">
-      <h5>{{page.snippet}}</h5>
+    <div class="blog-post col-8_xs-12">
+      <h1> {{page.title}} </h1>
+      <hr>
     </div>
+      <div class="blog-post col-8_xs-12 padded">
+        <h5>{{page.snippet}}</h5>
+      </div>
     <div>
     {{ content }}
     <div class="addthis_inline_share_toolbox"></div>
@@ -20,15 +20,14 @@ layout: default
   <div class="col-4_xs-12 blog-bio padded">
     <img class="blog-bio-photo" src="{{ page.author-photo }}">
         <h5> Written by:</h5>
-          <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
+        <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
         <h5> About: </h5>
-          <p> {{ page.author-bio}} </p>
-          <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/18901d70fb1a527e8f2fa6cf850780a5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-          <section class="sign-up-section">
-            <div>
-              <h4>
-                Sign up now and receive 20% off your first Learning Experience!</h4>
-              <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
-            </div>
-          </section>
+        <p> {{ page.author-bio}} </p>
+  <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/18901d70fb1a527e8f2fa6cf850780a5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+    <section class="sign-up-section">
+      <div>
+        <h4>Sign up now and receive 20% off your first Learning Experience!</h4>
+        <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
+      </div>
+    </section>
 </section>
