--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,8 +82,8 @@
     </div>
   </nav>
 </header>
-      <h1>
-        <div class="title">{{page.title}}</div>
+      <h1 class="{{page.banner-class}}">
+        <div class="title ">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
         {% if page.button == true %}
         <a class="white-button" href="/about.html"> Learn more </a>
