--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   </div>
   </div>
   </div>
-  <div class="col-4_xs-12 blog-bio padded">
+  <div class="col-4_xs-12 blog-bio padded center">
     <img class="blog-bio-photo" src="{{ page.author-photo }}">
         <h5> Written by:</h5>
         <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
