--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
         <div class="title ">{{page.title}}</div>
         <div class="strapline"><h3>{{page.subtitle}}</h3></div>
         {% if page.button == true %}
-        <a class="white-button" href="/about.html"> Learn more </a>
+        <a class="white-button" href="#sign-up"> Sign Up </a>
         {% endif %}
       </div>
       </h1>
@@ -96,6 +96,12 @@
   <!--Footer -->
 
     <footer class="footer-styles">
+      <nav class="col-6_sm-12 left no-padding">
+      <a href="/how-it-works.html">How it works</a>
+      <a href="/signup.html">Sign up</a>
+      <a href="/about.html">About</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
       <div>
         <a href="https://www.facebook.com/learnwithlocals/" target="_blank"><i class="fa fa-facebook-square label-icon" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/learnwithlocals/" target="_blank"><i class="fa fa-instagram label-icon" aria-hidden="true"></i></a>
