--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,18 +16,21 @@ layout: default
   </div>
   </div>
   </div>
+
   <div class="col-4_xs-12 blog-bio padded center">
     <img class="blog-bio-photo" src="{{ page.author-photo }}">
         <h5> Written by:</h5>
         <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
-        <h5> About: </h5>
-        <p> {{ page.author-bio}} </p>
+      </section>
+
+        <!--    <h5> About: </h5>
+    <p> {{ page.author-bio}} </p>
         <p> {{ page.author-about}} </p>
   <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/18901d70fb1a527e8f2fa6cf850780a5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-    <section class="sign-up-section">
+  </div>
+  <!--<section class="sign-up-section">
       <div>
         <h4>Sign up now and receive 20% off your first Learning Experience!</h4>
         <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
       </div>
-    </section>
-</section>
+    </section>-->
