--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
         <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
       </section>
 
-        <!--    <h5> About: </h5>
+        <h5> About: </h5>
     <p> {{ page.author-bio}} </p>
         <p> {{ page.author-about}} </p>
   <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/18901d70fb1a527e8f2fa6cf850780a5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
