--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,11 +21,12 @@ layout: default
     <img class="blog-bio-photo" src="{{ page.author-photo }}">
         <h5> Written by:</h5>
         <h5> {{ page.author-name }} - {{ page.blog-date }}</h5>
-
         <h5> About: </h5>
     <p> {{ page.author-bio}} </p>
         <p> {{ page.author-about}} </p>
+        <div class:"lightwidget padded center">
         <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/30177c729a245459acacae9468135271.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+      </div>
 </div>
 </section>
 
